--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <!-- Navbar section start -->
-    <nav class="navbar navbar-expand-lg bg-light py-3">
-      <div class="container d-flex justify-content-between align-items-center">
-        <!-- Logo -->
-        <img src="./assets/logo.png" alt="TechPro Logo" />
-
-        <!-- Toggle Button -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./assets//logo.png" alt="" />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,17 +31,15 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <!-- Navigation Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
-            class="navbar-nav me-auto mb-2 mb-lg-0 text-center d-flex flex-grow-1 justify-content-center"
+            class="navbar-nav me-auto mb-2 mb-lg-0 text-center d-md-flex flex-grow-1 justify-content-md-center justify-content-start"
           >
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
@@ -53,15 +51,62 @@
               <a class="nav-link" href="#">Blog</a>
             </li>
           </ul>
-        </div>
 
-        <!-- Contact Us Button -->
-        <button class="btn btn-dark fw-semibold" type="submit">
-          Contact Us
-        </button>
+          <div class="text-center">
+            <button class="btn btn-dark" type="submit">Contact Us</button>
+          </div>
+        </div>
       </div>
     </nav>
     <!-- Navbar section end -->
+    <!-- header section start -->
+    <header class="my-3 my-md-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12 p-3">
+            <div>
+              <p>Welcome to TechPro</p>
+              <h1 class="header-heading mt-1 mt-md-1 mb-4 mb-md-5">
+                Leading global <br />
+                technical service <br />
+                provider
+              </h1>
+              <p class="">
+                Posuere tortor magna hendrerit elit dolor sed cursus <br />
+                sed mus. Mauris quis sed aliquet vestibulum massa.
+              </p>
+            </div>
+            <div class="my-4 my-md-5">
+              <button class="button-orange">Get Started</button>
+              <button class="button-white ms-3">Learn More</button>
+            </div>
+
+            <div class="d-flex flex-sm-wrap flex-md-wrap flex-wrap">
+              <div class="me-5">
+                <h2 class="fs-2 fw-bold">450+</h2>
+                <p>Collections</p>
+              </div>
+              <div class="me-5">
+                <h2 class="fs-2 fw-bold">15k+</h2>
+                <p>Customers</p>
+              </div>
+              <div class="me-5">
+                <h2 class="fs-2 fw-bold">4.9+</h2>
+                <p>Rating & Review</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12 p-3">
+            <img
+              class="img-fluid"
+              src="./assets/header-img.png"
+              alt="header image"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- header section end -->
 
     <!-- Bootstrap CDN -->
     <script
