--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar section end -->
     <!-- header section start -->
     <header class="my-3 my-md-5">
       <div class="container">
@@ -106,8 +105,20 @@
         </div>
       </div>
     </header>
-    <!-- header section end -->
-
+    <!-- company start -->
+    <section class="container company my-5">
+      <p class="fw-bold">Over 32K+ technical service growing with TechPro</p>
+      <div
+        class="d-flex gap-3 flex-wrap flex-md-nowrap justify-content-between company-logo-container"
+      >
+        <img src="./assets/aribnb.png" alt="aribnb" />
+        <img src="./assets/hubspot.png" alt="hubspot" />
+        <img src="./assets/google.png" alt="google" />
+        <img src="./assets/microsoft.png" alt="microsoft" />
+        <img src="./assets/hubspot.png" alt="hubspot" />
+        <img src="./assets/walmart.png" alt="walmart" />
+      </div>
+    </section>
     <!-- Bootstrap CDN -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
